--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -22,7 +22,7 @@
 }
 
 .logo-icon {
-  color: #4A6741;
+  color: #4a6741;
 }
 
 .logo-text {
@@ -54,10 +54,10 @@
 }
 
 .nav-button.primary {
-  background: #4A6741;
-  border-color: #4A6741;
+  background: #4a6741;
+  border-color: #4a6741;
 }
 
 .nav-button.primary:hover {
-  background: #2C5530;
+  background: #2c5530;
 }
